fdo#30559: Added new tab page 'Compatibility' in the Options dialog.

This is the first cut: more changes to come.